--- a/cpp04/ex00/Makefile
+++ b/cpp04/ex00/Makefile
@@ -4,7 +4,9 @@ CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp\
 	Animal.cpp\
 	Dog.cpp\
-	Cat.cpp
+	Cat.cpp\
+	WrongAnimal.cpp\
+	WrongCat.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
