--- a/cpp01/ex04/Makefile
+++ b/cpp01/ex04/Makefile
@@ -1,16 +1,21 @@
 NAME = ex04
 CPP = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
+
+DEP = $(OBJ:.o=.d)
 
 all : $(NAME)
 
 $(NAME) : $(OBJ)
 		$(CPP) $(CPPFLAGS) -o $@ $^
+
+-include $(DEP)
+
 clean:
-	rm -rf  $(OBJ)
+	rm -rf  $(OBJ) $(DEP)
 
 fclean:
 	make clean
