--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -1,19 +1,22 @@
 NAME = ClapTrap
 CPP = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp\
 	ClapTrap.cpp
 
 OBJ = $(SRC:.cpp=.o)
+
+DEP = $(OBJ:.o=.d)
 
 all : $(NAME)
 
 $(NAME) : $(OBJ)
 		$(CPP) $(CPPFLAGS) -o $@ $^
 
+-include $(DEP)
 
 clean:
-	rm -rf  $(OBJ)
+	rm -rf  $(OBJ) $(DEP)
 
 fclean:
 	make clean
