--- a/cpp03/ex01/Makefile
+++ b/cpp03/ex01/Makefile
@@ -1,20 +1,23 @@
 NAME = ScavTrap
 CPP = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp\
 	ClapTrap.cpp\
 	ScavTrap.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
+DEP = $(OBJ:.o=.d)
+
 all : $(NAME)
 
 $(NAME) : $(OBJ)
 		$(CPP) $(CPPFLAGS) -o $@ $^
 
+-include $(DEP)
 
 clean:
-	rm -rf  $(OBJ)
+	rm -rf  $(OBJ) $(DEP)
 
 fclean:
 	make clean
