--- a/cpp04/ex02/Makefile
+++ b/cpp04/ex02/Makefile
@@ -1,4 +1,4 @@
-NAME = ex02
+NAME = Brain
 CPP = c++
 CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp\
@@ -6,6 +6,8 @@ SRC = main.cpp\
 	Dog.cpp\
 	Cat.cpp\
 	Brain.cpp\
+	WrongAnimal.cpp\
+	WrongCat.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
