--- a/cpp04/ex01/Makefile
+++ b/cpp04/ex01/Makefile
@@ -5,9 +5,7 @@ SRC = main.cpp\
 	Animal.cpp\
 	Dog.cpp\
 	Cat.cpp\
-	Brain.cpp\
-	WrongAnimal.cpp\
-	WrongCat.cpp
+	Brain.cpp
 
 OBJ = $(SRC:.cpp=.o)
 
