--- a/cpp07/ex02/Makefile
+++ b/cpp07/ex02/Makefile
@@ -1,6 +1,6 @@
-NAME = dynamic
+NAME = ex02
 CPP = c++
-CPPFLAGS = -Wall -Wextra -Werror -std=c++98
+CPPFLAGS = -Wall -Wextra -Werror -MMD -MP -std=c++98
 SRC = main.cpp
 
 OBJ = $(SRC:.cpp=.o)
@@ -9,7 +9,6 @@ all : $(NAME)
 
 $(NAME) : $(OBJ)
 		$(CPP) $(CPPFLAGS) -o $@ $^
-
 
 clean:
 	rm -rf  $(OBJ)
