--- a/cpp07/ex01/Makefile
+++ b/cpp07/ex01/Makefile
@@ -1,7 +1,7 @@
-NAME = dynamic
+NAME = ex00
 CPP = c++
 CPPFLAGS = -Wall -Wextra -Werror -std=c++98
-SRC = main.cpp
+SRC = main.cpp\
 
 OBJ = $(SRC:.cpp=.o)
 
